--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         {% for path in paths %}
-            <li><a href="{{url_for('view',path=path)}}">{{path}}</a></li>
+            <li><a href="{{url_for('view',path=path.path)}}">{{path.title}}</a></li>
         {% endfor %}
     </ul>
 </body>
